<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src="@drawable/ic1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogo1"
        android:id="@+id/btnLogo1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:onClick="goToTicketsActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogo2"
        android:id="@+id/btnLogo2"
        android:layout_alignTop="@+id/btnLogo1"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:onClick="goToExamActivity"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogo3"
        android:id="@+id/button3"
        android:layout_above="@+id/btnLogo4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        android:onClick="goToRulesActivity"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogo4"
        android:id="@+id/btnLogo4"
        android:layout_below="@+id/btnLogo2"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:onClick="goToStatisticActivity"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Работает только кнопка билеты, остальные лишь макет"
        android:id="@+id/textView7"
        android:layout_below="@+id/btnLogo4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:textSize="30dp" />

</RelativeLayout>