<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Test"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/image1t1"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/INF" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:id="@+id/horizontalScrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img1"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img2"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img3"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img4"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img5"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img6"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img7"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img8"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img9"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img10"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img11"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img12"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img13"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img14"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img15"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img16"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img17"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img18"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img19"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img20"
                android:src="@drawable/grey"
                android:contentDescription="@string/INF"/>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/testQuestion"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAnswer1"
        android:id="@+id/btnAnswer1"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAnswer2"
        android:id="@+id/btnAnswer2"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAnswer3"
        android:id="@+id/btnAnswer3"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAnswer4"
        android:id="@+id/btnAnswer4"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAnswer5"
        android:id="@+id/btnAnswer5"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:textAllCaps="false"/>

</LinearLayout>